--- a/linux/计算机组成原理.md
+++ b/linux/计算机组成原理.md
@@ -154,3 +154,14 @@ ELF 文件格式把各种信息，分成一个一个的 Section 保存起来。E
 在 CPU 的硬件里面，需要再单独拉一根信号传输的线路出来，使得 ALU 的计算结果，能够重新回到 ALU 的输入里来。这样的一条线路，就是我们的“旁路”。它越过（Bypass）了写入寄存器，再从寄存器读出的过程，也为我们节省了 2 个时钟周期。
 * 操作数前推的解决方案不但可以单独使用，还可以和流水线冒泡一起使用
 ![](./assets\cpu_操作数旁路.jpeg)
+
+### 乱序执行
+* 整个乱序执行技术，就好像在指令的执行阶段提供一个“线程池”。指令不再是顺序执行的，而是根据池里所拥有的资源，以及各个任务是否可以进行执行，进行动态调度。在执行完成之后，又重新把结果在一个队列里面，按照指令的分发顺序重新排序。即使内部是“乱序”的，但是在外部看起来，仍然是井井有条地顺序执行。
+![](./assets\cpu_乱序执行.jpeg)
+* 指令执行的先后顺序，不再和它们在程序中的顺序有关。我们只要保证不破坏数据依赖就好了。CPU 只要等到在指令结果的最终提交的阶段，再通过重排序的方式，确保指令“实际上”是顺序执行的。
+* https://en.wikipedia.org/wiki/Tomasulo_algorithm
+* 保障内存数据访问顺序的模型，叫作强内存模型（Strong Memory Model）
+### 控制冒险（Control Harzard）:为了确保能取到正确的指令，而不得不进行等待延迟
+* 在结构冒险和数据冒险中，所有的流水线停顿操作都要从指令执行阶段开始，但是条件、循环逻辑等要等 jmp 指令执行完成，去更新了 PC 寄存器之后，我们才能知道，是否执行下一条指令，还是跳转到另外一个内存地址，去取别的指令。
+* 控制冒险策略，有缩短分支延迟，分支预测，动态分支预测
+* 分支预测：交换内外循环的顺序，因为控制冒险导致性能差异。虽然执行的指令数是一样的，但是分支预测失败得多的程序，性能就要差上几倍。
