--- a/linux/计算机组成原理.md
+++ b/linux/计算机组成原理.md
@@ -165,3 +165,107 @@ ELF 文件格式把各种信息，分成一个一个的 Section 保存起来。E
 * 在结构冒险和数据冒险中，所有的流水线停顿操作都要从指令执行阶段开始，但是条件、循环逻辑等要等 jmp 指令执行完成，去更新了 PC 寄存器之后，我们才能知道，是否执行下一条指令，还是跳转到另外一个内存地址，去取别的指令。
 * 控制冒险策略，有缩短分支延迟，分支预测，动态分支预测
 * 分支预测：交换内外循环的顺序，因为控制冒险导致性能差异。虽然执行的指令数是一样的，但是分支预测失败得多的程序，性能就要差上几倍。
+### CPU的吞吐率超过1
+* 超标量，也就是 Superscalar 这个方法。超标量可以让 CPU 不仅在指令执行阶段是并行的，在取指令和指令译码的时候，也是并行的。依赖于在硬件层面，能够检测到对应的指令的先后依赖关系，解决“冒险”问题。
+* 超长指令字（VLIW）：通过在编译器层面，直接分析出指令的前后依赖关系。于是，硬件在代码编译之后，就可以直接拿到调换好先后顺序的指令。并且这些指令中，可以并行执行的部分，会打包在一起组成一个指令包。安腾处理器在取指令和指令译码的时候，拿到的不再是单个指令，而是这样一个指令包。并且在指令执行阶段，可以并行执行指令包里所有的指令。
+
+### 线程级并行和指令集并行
+* 超线程（Hyper-Threading）：在一个物理 CPU 核心内部，会有双份的 PC 寄存器、指令寄存器乃至条件码寄存器。这样，这个 CPU 核心就可以维护两条并行的指令的状态。超线程的目的，是在一个线程 A 的指令，在流水线里停顿的时候，让另外一个线程去执行指令。两个线程间没有指令依赖。适合：磁盘io和网络io比较多的情况下
+
+* 单指令多数据流（SIMD）：单指令，一个寄存器一次性可以加载 4 个整数。比起循环分别读取 4 次对应的数据，时间就省下来了。MMX（Matrix Math eXtensions，矩阵数学扩展）、SSE、AVX，多媒体处理、机器学习算法等矩阵运算，在处理向量计算的情况下，同一个向量的不同维度之间的计算是相互独立的。可视为“数据并行”的加速方案
+
+### 异常和中断
+* 计算机会为每一种可能会发生的异常，分配一个异常代码（Exception Number）。有些教科书会把异常代码叫作中断向量（Interrupt Vector）。在捕捉异常的时候，由硬件 CPU 在进行相应的操作，而在处理异常层面，则是由作为软件的异常处理程序进行相应的操作。I/O 发出的信号的异常代码，是由操作系统来分配的，也就是由软件来设定的。而像加法溢出这样的异常代码，则是由 CPU 预先分配好的，也就是由硬件来分配的。这又是另一个软件和硬件共同组合来处理异常的过程。CPU 在拿到了异常码之后，会先把当前的程序执行的现场，保存到程序栈里面，然后根据异常码查询-中断向量表（Interrupt Vector Table），找到对应的异常处理程序，最后把后续指令执行的指挥权，交给这个异常处理程序。
+* 异常的处理：上下文切换(寄存器->内核栈(用户态和内核态之间的切换)和程序栈)
+![](./assets\cpu_中断.jpeg)
+### 复杂指令集（Complex Instruction Set Computing，简称 CISC）和精简指令集（Reduced Instruction Set Computing，简称 RISC）
+* RISC 的通过减少 CPI 来提升性能，而 CISC 通过减少需要的指令数来提升性能。
+![](./assets\cpu_risc.jpeg)
+RISC 的 CPU 里完成指令的电路变得简单了，于是也就腾出了更多的空间。这个空间，常常被拿来放通用寄存器。因为 RISC 完成同样的功能，执行的指令数量要比 CISC 多，所以，如果需要反复从内存里面读取指令或者数据到寄存器里来，那么很多时间就会花在访问内存上。于是，RISC 架构的 CPU 往往就有更多的通用寄存器。RISC 的 CPU 也可以把更多的晶体管，用来实现更好的分支预测等相关功能，进一步去提升 CPU 实际的执行效率。
+* 微指令（Micro-Instructions/Micro-Ops）架构。在机器码层面保留了 CISC 风格的x86 架构的指令集,但是，通过指令译码器和 L0 缓存的组合，使得这些指令可以快速翻译成 RISC 风格的微指令，使得实际执行指令的流水线可以用 RISC 的架构来搭建。而微指令架构的引入，也让 CISC 和 RISC 的分界变得模糊了。
+![](./assets\cpu_micro_ops.jpeg)
+* ARM-Advanced RISC Machines: https://riscv.org/
+
+### GPU
+* 基于多边形建模的三维图形的渲染
+顶点处理（Vertex Processing）:每一个顶点位置的转换，互相之间没有依赖，是可以并行独立计算的   
+图元处理（Primitive Processing）:各个顶点连起来,变成多边形,其实转化后的顶点，仍然是在一个三维空间里，只是第三维的 Z 轴，是正对屏幕的“深度”。 针对这些多边形，需要做一个操作，叫剔除和裁剪（Cull and Clip），也就是把不在屏幕里面，或者一部分不在屏幕里面的内容给去掉，减少接下来流程的工作量。    
+栅格化（Rasterization）: 转换成屏幕里面的一个个像素点。这个栅格化操作，每一个图元都可以并行独立地栅格化。  
+片段处理（Fragment Processing）:计算每一个像素的颜色、透明度等信息，给像素点上色,可并行。  
+像素操作（Pixel Operations）：把不同的多边形的像素点“混合（Blending）”到一起
+
+* 统一着色器架构（Unified Shader Architecture）:因为指令集是一样的，顶点处理、图元处理、片段处理这些任务，都交给这些 Shader 去处理，让整个 GPU 尽可能地忙起来。
+* 芯片瘦身：没有 CPU 这样的分支预测和乱序执行电路.之后，基于渲染管线里面顶点处理和片段处理就是天然可以并行的了。我们在 GPU 里面可以加上很多个核。
+![](./assets\gpu.jpeg)
+* SIMT（Single Instruction，Multiple Threads）：SIMT 呢，比 SIMD 更加灵活。在 SIMD 里面，CPU 一次性取出了固定长度的多个数据，放到寄存器里面，用一个指令去执行。而 SIMT，可以把多条数据，交给不同的线程去处理。相同的代码和相同的流程，可能执行不同的具体的指令。在取指令和指令译码的阶段，取出的指令可以给到后面多个不同的 ALU 并行进行运算。这样，我们的一个 GPU 的核里，就可以放下更多的 ALU，同时进行更多的并行运算了。
+* 超线程：因为芯片瘦身，GPU 里的指令，可能会遇到和 CPU 类似的“流水线停顿”问题,要调度一个不同的任务过来，我们就需要针对这个任务，提供更多的执行上下文。一个 Core 里面的执行上下文的数量，需要比 ALU 多
+
+* https://www.techpowerup.com/gpu-specs/geforce-rtx-2080.c3224  
+2080 一共有 46 个 SM（Streaming Multiprocessor，流式处理器），这个 SM 相当于 GPU 里面的 GPU Core，所以你可以认为这是一个 46 核的 GPU，有 46 个取指令指令译码的渲染管线。每个 SM 里面有 64 个 Cuda Core。你可以认为，这里的 Cuda Core 就是我们上面说的 ALU 的数量或者 Pixel Shader 的数量，46x64 呢一共就有 2944 个 Shader。然后，还有 184 个 TMU，TMU 就是 Texture Mapping Unit，也就是用来做纹理映射的计算单元，它也可以认为是另一种类型的 Shader。  
+[Introduction-to-GPUs](./assets\Introduction-to-GPUs.pdf)
+
+2080 的主频是 1515MHz，如果自动超频（Boost）的话，可以到 1700MHz。而 NVidia 的显卡，根据硬件架构的设计，每个时钟周期可以执行两条指令。所以，能做的浮点数运算的能力，就是：（2944 + 184）× 1700 MHz × 2  = 10.06  TFLOPS
+
+### 现场可编程门阵列（Field-Programmable Gate Array）
+* LUT（Look-Up Table，查找表）电路: 其实就是一块存储空间，里面存储了“特定的输入信号下，对应输出 0 还是 1”,代替需要的硬连线的电路，有了可编程的逻辑门
+* 逻辑簇（Logic Cluster）: 对于需要实现的时序逻辑电路，我们可以在 FPGA 里面直接放上 D 触发器，作为寄存器。组合了多个 LUT 和寄存器的设备，也被叫做 CLB（Configurable Logic Block，可配置逻辑块）。
+* FPGA，常常被我们用来进行芯片的设计和验证工作，也可以直接拿来当成专用的芯片，替换掉 CPU 或者 GPU，以节约成本。
+### ASIC（Application-Specific Integrated Circuit），也就是专用集成电路
+* 研发成本高，但制造，能耗成本低
+* 用特制的硬件，最大化特定任务的运行效率
+### TPU
+* 做各种深度学习的推断而设计出来的，TPU 并不需要太灵活的可编程能力，只要能够迭代完成常见的深度学习推断过程中一层的计算过程就好了。所以，TPU 的硬件构造里面，把矩阵乘法、累加器和激活函数都做成了对应的专门的电路。
+* 了满足深度学习推断功能的响应时间短的需求，TPU 设置了很大的使用 SRAM 的 Unified Buffer（UB），就好像一个 CPU 里面的寄存器一样，能够快速响应对于这些数据的反复读取。
+* 为了让 TPU 尽可能快地部署在数据中心里面，TPU 采用了现有的 PCI-E 接口，可以和 GPU 一样直接插在主板上，并且采用了作为一个没有取指令功能的协处理器
+* 因为机器学习的推断功能，通常做了数值的归一化，所以对于矩阵乘法的计算精度要求有限，整个矩阵乘法的计算模块采用了 8 Bits 来表示浮点数，而不是像 Intel CPU 里那样用上了 32 Bits（32 位浮点数的精度，差不多可以到 1/1600 万）。
+### 虚拟机
+* 解释型虚拟机：用应用程序解释需要模拟的计算机系统的程序格式和指令。宿主机（Host）-模拟器（Emulator）-客户机（Guest VM）
+* 这种解释执行方式的最大的优势就是，模拟的系统可以跨硬件。eg:android Emulator,jvm.
+* 缺点：做不到精确的“模拟”硬件。性能差。 JIT 这样的“编译优化”的办法，通过收集程序运行中反复执行的中间代码，直接编译成机器指令来执行
+* 虚拟机监视器，英文叫 VMM（Virtual Machine Manager）或者 Hypervisor。Type-1型：实际的指令不需要再通过宿主机的操作系统，而可以直接通过虚拟机监视器访问硬件，KVM、XEN 还是微软自家的 Hyper-V，其实都是系统级的程序，嵌入在操作系统内核里面。需要包含能够直接操作硬件的驱动程序。所以 Type-1 的虚拟机监视器更大一些，同时兼容性也不能像 Type-2 型那么好。
+* Docker 并没有再单独运行一个客户机的操作系统，而是直接运行在宿主机操作系统的内核之上只能算是一种资源隔离的技术而已。
+
+# 存储器
+## 总览
+* SRAM（Static Random-Access Memory，静态随机存取存储器）：每个 CPU 核心都有一块属于自己的 L1 高速缓存，通常分成指令缓存和数据缓存，分开存放 CPU 使用的指令和数据。L1 的 Cache 往往就嵌在 CPU 核心的内部。L2 的 Cache 同样是每个 CPU 核心都有的，不过它往往不在 CPU 核心的内部。所以，L2 Cache 的访问速度会比 L1 稍微慢一些。而 L3 Cache，则通常是多个 CPU 核心共用的，尺寸会更大一些，访问速度自然也就更慢一些。
+* DRAM（Dynamic Random Access Memory，动态随机存取存储器）芯片：因为 DRAM 需要靠不断地“刷新”，才能保持数据被存储起来。DRAM 的一个比特，只需要一个晶体管和一个电容就能存储。所以，DRAM 在同样的物理空间下，能够存储的数据也就更多，也就是存储的“密度”更大。因为数据是存储在电容里的，电容会不断漏电，所以需要定时刷新充电，才能保持数据不丢失。内存里的数据断电后也会丢失的原因。DRAM 的数据访问电路和刷新电路都比 SRAM 更复杂，所以访问延时也就更长。
+* SSD（Solid-state drive 或 Solid-state disk，固态硬盘）：
+* HDD（Hard Disk Drive，硬盘）
+* 各个存储器只和相邻的一层存储器打交道，并且随着一层层向下，存储器的容量逐层增大，访问速度逐层变慢，而单位存储成本也逐层下降。性能差异和价格差异至少在一个数量级
+![](./assets\storage_total.png)
+[Latency Numbers Every Programmer Should Know](https://colin-scott.github.io/personal_website/research/interactive_latency.html)
+## 缓存优化：局部性原理+读多写少
+* 硬盘容量是内存的 16 倍乃至 128 倍，但是它们的访问速度却不到内存的 1/1000。
+![](./assets\storage_diff.png)
+* 局部性原理（Principle of Locality）包括时间局部性（temporal locality）和空间局部性（spatial locality）这两种策略+LRU（Least Recently Used）缓存淘汰算法+缓存命中率。可以用最低的成本提供实际所需要的数据存储、管理和访问的需求。
+* **估算 + 规划**：1s=1000ms=1000*1000us=1000*1000*1000ns 访问一次内存需要100ns, 那么1秒可以访问1s/100ns=10,000,000次。在实际的应用程序中，查看一个商品的数据可能意味着不止一次的随机内存或者随机磁盘的访问。对应的数据存储空间也不止要考虑数据，还需要考虑维护数据结构的空间，而缓存的命中率和访问请求也要考虑均值和峰值的问题。硬件规划：需求评估,访问的数据量以及访问的数据分布，然后根据这些数据的估算，来组合不同的存储器，能用尽可能低的成本支撑所需要的服务器压力。而当你用上了数据访问的局部性原理，组合起了多种存储器，你也就理解了怎么基于存储器层次结构，来进行硬件规划了。
+
+## 高速缓存-读
+* 一次内存的访问，大约需要 120 个 CPU Cycle，这也意味着，CPU 和内存的访问速度已经有了 120 倍的差距。按照摩尔定律，CPU 的访问速度每 18 个月便会翻一番，相当于每年增长 60%。内存的访问速度虽然也在不断增长，却远没有这么快，每年只增长 7% 左右。随着时间变迁，CPU 和内存之间的性能差距越来越大
+* 现代 CPU 中大量的空间已经被 SRAM 占据，CPU 从内存中读取数据到 CPU Cache 的过程中，是一小块一小块（Cache Line（缓存块）64 字节）来读取数据的，CPU Cache 的命中率通常能达到 95% 以上。
+* 直接映射 Cache（Direct Mapped Cache）：CPU 要访问的内存数据，存储在 Cache 的哪个位置？Cache 采用 mod 的方式，把内存块映射到对应的 CPU Cache 中。实际上：把缓存块的数量设置成 2 的 N 次方，这样在计算取模的时候，可以直接取Block 地址的低 N 位，也就是二进制里面的后几位，就能得到对应的 Cache Line 地址（mod -> 位运算）。将内存中数据加载进cache中时，是一个block一个block的读写。CPU从cache中读取数据时，是根据偏移量读取block中的一个字（Word）。总结一下，一个内存的访问地址，最终包括高位代表的组标记、低位代表的索引，以及在对应的 Data Block 中定位对应字的位置偏移量。
+![](./assets\l3_cache.png)
+* 而内存地址对应到 Cache 里的数据结构，则多了一个有效位和对应的数据，由“索引 + 有效位  + 组标记 + 数据”组成。如果内存中的数据已经在 CPU Cache 里了，那一个内存地址的访问，就会经历这样 4 个步骤：
+1. 根据内存地址的低位，计算在 Cache 中的索引；
+2. 判断有效位，确认 Cache 中的数据是有效的；
+3. 对比内存访问地址的高位，和 Cache 中的组标记，确认 Cache 中的数据就是我们要访问的内存数据，从 Cache Line 中读取到对应的数据块（Data Block）；
+4. 根据内存地址的 Offset 位，从 Data Block 中，读取希望读取到的字。
+
+如果在 2、3 这两个步骤中，CPU 发现，Cache 中的数据并不是要访问的内存地址的数据，那 CPU 就会访问内存，并把对应的 Block Data 更新到 Cache Line 中，同时更新对应的有效位和组标记的数据。CPU Cache 带来的毫秒乃至微秒级别的性能差异，又能带来巨大的商业利益.
+
+## 高速缓存-写
+* 在 CPU Cache 里，对于数据的写入，我们也有写直达和写回这两种解决方案。在写回这个策略里，如果我们大量的操作，都能够命中缓存。那么大部分时间里，我们都不需要读写主内存，只更新缓存,只有在需要把缓存里面的脏数据交换出去的时候，才把数据同步到主内存里.
+![](./assets\cache_write.jpeg)
+* volatile 保障我们对于数据的读写都会到达主内存。否则，如果内存中的这个变量被别的因素（其他线程、中断函数、信号处理函数、DMA控制器、其他硬件设备）所改变了，就产生数据不一致的问题。另外，寄存器访问指令的速度要比内存访问指令的速度快，这里说的内存也包括缓存，也就是说内存访问指令实际上也有可能访问的是缓存里的数据，但即便如此，还是不如访问寄存器快的。缓存对于编译器也是透明的，编译器使用内存读写指令时只会认为是在读写内存，内存和缓存间的数据同步由CPU保证。
+* https://developer.ibm.com/languages/java/
+
+## MESI协议-缓存一致性
+* 总线嗅探（Bus Snooping）机制:把所有的读写请求都通过总线（Bus）广播给所有的 CPU 核心，然后让各个核心去“嗅探”这些请求，再根据本地的情况进行响应，能够实现事务的串行化。
+![](assets\l123_cache.jpeg)
+* MESI 协议：基于写失效的缓存一致性协议，是支持回写（write-back）缓存的最常用协议。整个 MESI 的状态变更，则是根据来自自己 CPU 核心的请求，以及来自其他 CPU 核心通过总线传输过来的操作信号和地址信息，进行状态流转的一个有限状态机。
+![wiki](assets\mesi.jpeg)
+* [wiki](https://zh.wikipedia.org/wiki/MESI%E5%8D%8F%E8%AE%AE)
+* [极客时间](https://time.geekbang.org/column/article/109874)
+
+## 虚拟内存和内存保护
+* 页号是20位，另外12位是偏移地址。 每页大小是4KB，4K=2^12B，所以要在4KB的页面里面进行寻址，偏移量是12位。 要表示4GB的内存，4GB = 2^32 = 2^20 * 2^12，所以需要2^20页，所以页号是20位。
